--- a/app_common/build.gradle
+++ b/app_common/build.gradle
@@ -1,33 +1,20 @@
-apply plugin: 'com.android.library'
+apply plugin: Plugins.library
+
+apply plugin: Plugins.kotlin
+
+apply plugin: Plugins.kotlinExtensions
+
+apply plugin: Plugins.safeArgs
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion Android.compileSDK
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion Android.minSDK
+        targetSdkVersion Android.compileSDK
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api project (":base_android")
 }
