--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project (":app_common")
+
+    implementation Libs.koin
+    implementation Libs.koinVM
 }
