--- a/app_common/build.gradle
+++ b/app_common/build.gradle
@@ -17,4 +17,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project (":base_android")
+    //Constraint
+    api Libs.constraintLayout
 }
