--- a/app_common/build.gradle
+++ b/app_common/build.gradle
@@ -7,15 +7,9 @@ apply plugin: plugin_kotlin_kapt
 android {
     compileSdkVersion compileVersion
     buildToolsVersion toolVersion
-
-
     defaultConfig {
         minSdkVersion minTarget
         targetSdkVersion targetVersion
-    }
-
-    dataBinding{
-        enabled = true
     }
     compileOptions {
         sourceCompatibility = java_compatibility
@@ -24,8 +18,7 @@ android {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //api  'com.github.bagy94:android-base:master-SNAPSHOT'
-    api project(':base') //For local work purpose
+    api baseModule
     api koin
     api koinViewModel
     implementation okhttp_log
