--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-authToken=jp_nrp5sjhehqq4p2ravvg75f45n
+android.defaults.buildfeatures.databinding = true
