--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.3.72'
     ext.gradle_version = '4.0.1'
-    ext.application_id = "hr.bagy94.template"
+    ext.application_id = "hr.bagy94.template" //TODO: Update this with package name
     repositories {
         google()
         jcenter()
