--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,6 @@
 ext {
     plugin_app = "com.android.application"  // apply plugin : plugin_app
     plugin_lib = "com.android.library" // apply plugin : plugin_lib
-    plugin_feature = "com.android.feature" // apply plugin : plugin_feature
     plugin_dynamic_feature = 'com.android.dynamic-feature' // apply plugin: plugin_dynamic_feature
     plugin_kotlin = "kotlin-android" // apply plugin : plugin_kotlin
     plugin_kotlin_ext = "kotlin-android-extensions" // apply plugin : plugin_kotlin_ext
@@ -18,8 +17,7 @@ ext {
     baseModule_v = "master-SNAPSHOT"
     baseModule = "com.github.bagy94:android-base:$baseModule_v"
     //Kotlin
-    kotlin_v = '1.3.72'
-    kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_v"
+    kotlin = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Android
     appCompat_v = "1.1.0"
     appCompat = "androidx.appcompat:appcompat:$appCompat_v"
@@ -34,11 +32,11 @@ ext {
     koin = "org.koin:koin-android:$koin_v"
     koinViewModel = "org.koin:koin-android-viewmodel:$koin_v"
     //Rx
-    rxJava_v = '3.0.4'
+    rxJava_v = '3.0.6'
     rxJava = "io.reactivex.rxjava3:rxjava:$rxJava_v"
     rxAndroid_v = "3.0.0"
     rxAndroid = "io.reactivex.rxjava3:rxandroid:$rxAndroid_v"
-    rxKotlin_v = '3.0.0'
+    rxKotlin_v = '3.0.1'
     rxKotlin = "io.reactivex.rxjava3:rxkotlin:$rxKotlin_v"
     rxBindings_v = '4.0.0'
     rxBindings = "com.jakewharton.rxbinding4:rxbinding:$rxBindings_v"
@@ -48,7 +46,7 @@ ext {
     retrofitGSONConverter = "com.squareup.retrofit2:converter-gson:$retrofit_v"
     retrofitRxJavaAdapter = "com.squareup.retrofit2:adapter-rxjava3:$retrofit_v"
     // OkHttp
-    okhttp_version = '4.8.0'
+    okhttp_version = '4.9.0'
     okhttp_url = "com.squareup.okhttp3:okhttp-urlconnection:$okhttp_version"
     okhttp_logging = "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     //Android Jetpack
