--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
@@ -14,25 +8,9 @@
 .cxx
 libs/
 src/androidTest/
-src/main/java/
 src/test/
-/.idea/.name
-/.idea/dictionaries/bagy.xml
-/.idea/codeStyles/codeStyleConfig.xml
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/codeStyles/Project.xml
-/.idea/runConfigurations.xml
-/.idea/vcs.xml
+.idea/
 app_common/src/androidTest/java/hr/bagy94/common/
-app_common/src/main/res/drawable/
 app_common/src/test/java/hr/bagy94/common/
 
 base/
-base/.gitignore
-base/README.md
-base/base_dependencies.gradle
-base/build.gradle
-base/local.properties
-base/proguard-rules.pro
-base/src/
