--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.gradle_version = '4.0.1'
+    ext.kotlin_version = '1.4.10'
+    ext.gradle_version = '4.1.1'
     ext.application_id = "hr.bagy94.template" //TODO: Update this with package name
     repositories {
         google()
@@ -8,7 +8,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:${gradle_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
